Seoul_vpc.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: Default VPC stack for the ShakeShakeBurger Web Service
Parameters:
  ProjectName:
    Type: String
    Description: Project Name
  RegionName:
    Type: String
    Description: Region Name
  SeoulPubIp:
    Type: String
    Description: Seoul Public IP Address
    Default: 0.0.0.0/0

Mappings:
  CidrMap:
    ap-northeast-2:
      VpcCidr: 10.1.0.0/16
      PubSn1Cidr: 10.1.1.0/24
      PubSn2Cidr: 10.1.2.0/24
      PriSn3Cidr: 10.1.3.0/24
      PriSn4Cidr: 10.1.4.0/24
    sa-east-1:
      VpcCidr: 172.17.0.0/16
      PubSn1Cidr: 172.17.1.0/24
      PubSn2Cidr: 172.17.2.0/24
      WebSn3Cidr: 172.17.3.0/24
      WebSn4Cidr: 172.17.4.0/24     
  AmiMap:
    ap-northeast-2:
      Ami: ami-07d737d4d8119ad79
    sa-east-1:
      Ami: ami-07a943af5a5ec252b

Conditions:
  CreateSgIngress: !Equals [!Ref "AWS::Region", ap-northeast-2]

Resources:
#VPC 생성
  SeoulVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", VpcCidr]
      EnableDnsHostnames: true
      EnableDnsSupport: true
      Tags:
       - Key: Name
         Value: SeoulVPC

#인터넷 게이트웨이
  SeoulIgw:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: !Sub "${ProjectName}-igw"

#vpc-igw attatch
  IgwAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref SeoulIgw
      VpcId: !Ref SeoulVPC
#서브넷
  SeoulPubSn1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SeoulVPC
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", PubSn1Cidr]
      MapPublicIpOnLaunch: true  # 퍼블릭 IP 자동 할당
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-Seoulpub-sn1"
  SeoulPubSn2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SeoulVPC
      AvailabilityZone: !Select [2, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", PubSn2Cidr]
      MapPublicIpOnLaunch: true  # 퍼블릭 IP 자동 할당
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-Seoulpub-sn2"
  SeoulPriSn3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SeoulVPC
      AvailabilityZone: !Select [0, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", PriSn3Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-Seoulpri-sn3"
  SeoulPriSn4:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref SeoulVPC
      AvailabilityZone: !Select [2, !GetAZs '']
      CidrBlock: !FindInMap [CidrMap, !Ref "AWS::Region", PriSn4Cidr]
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${RegionName}-Seoulpri-sn4"

#RouteTable12
  SeoulPubRt12:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SeoulVPC
      Tags:
      - Key: Name
        Value: SeoulPubRt12
  PubRt12Sn1Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SeoulPubRt12
      SubnetId: !Ref SeoulPubSn1
  PubRt12Sn2Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SeoulPubRt12
      SubnetId: !Ref SeoulPubSn2
  PubRt12DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: IgwAttachment
    Properties:
      RouteTableId: !Ref SeoulPubRt12
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref SeoulIgw

#RouteTable34
  SeoulPriRt34:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref SeoulVPC
      Tags:
      - Key: Name
        Value: SeoulPriRt34
  PriRt34Sn1Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SeoulPriRt34
      SubnetId: !Ref SeoulPriSn3
  PriRt34Sn2Association:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref SeoulPriRt34
      SubnetId: !Ref SeoulPriSn4
  PriRt34DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: IgwAttachment
    Properties:
      RouteTableId: !Ref SeoulPriRt34
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref SeoulIgw

# Outputs
Outputs:
  VpcId:
    Description: The VPC ID
    Value: !Ref SeoulVPC
    Export:
      Name: VpcId
  SeoulPubSn1Id:
    Description: The Public Subnet1 ID
    Value: !Ref SeoulPubSn1
    Export:
      Name: SeoulPubSn1Id
  SeoulPubSn2Id:
    Description: The Public Subnet2 ID
    Value: !Ref SeoulPubSn2
    Export:
      Name: SeoulPubSn2Id
  SeoulPriSn3Id:
    Description: The Private Subnet3 ID
    Value: !Ref SeoulPriSn3
    Export:
      Name: SeoulPriSn3Id
  SeoulPriSn4Id:
    Description: The Private Subnet4 ID
    Value: !Ref SeoulPriSn4
    Export:
      Name: SeoulPriSn4Id



...
